--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ go:
 
 install:
   - go get github.com/mattn/goveralls
+  - go get github.com/golang/dep/cmd/dep
 
 script:
-  - go test -v .
+  - ./build+test
