--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ go:
 
 install:
   - go get github.com/mattn/goveralls
-  - go get github.com/golang/dep/cmd/dep
 
 script:
   - ./build+test
+  - ./v3/build+test
