--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,30 +1,36 @@
 # This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
+# For more information see:
+#  https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
+#  https://github.com/marketplace/actions/coveralls-github-action
 
 name: Go
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ main ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.24'
+      - name: Set up Go 1.24.x
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.24'
 
-    - name: Test
-      run: go test ./...
+      - name: Set up Mage
+        run: go install tool
 
-    - name: Vet
-      run: go vet ./...
+      - name: Test
+        run: mage build coverage
 
-    - name: Build
-      run: go build -o simple-webserver ./webserver
+      - name: Coveralls
+        uses: coverallsapp/github-action@v2
+        with:
+          file: coverage.out
+          format: golang
+          debug: false
